--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,13 +7,13 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(GTest REQUIRED)
 
-add_executable(matrix_test test_main.cpp)
+add_executable(matrix_test test_main.cpp ${HEADER_FILES})
 
 set_target_properties(matrix_test PROPERTIES
 INCLUDE_DIRECTORIES "${GTEST_INCLUDE_DIRS};${INCLUDE_DIR}"
 )
 
-target_link_libraries(matrix_test ${GTEST_LIBRARIES})
+target_link_libraries(matrix_test ${GTEST_LIBRARIES} )
 
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
 	target_link_libraries(matrix_test pthread)
