--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,28 +6,23 @@ else()
    project(matrix VERSION 0.0.1)
 endif()
 
-set(INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
-set(SRC_DIR ${PROJECT_SOURCE_DIR}/src)
-
 configure_file(version.h.in ${PROJECT_SOURCE_DIR}/version.h)
 
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-file(GLOB HEADER_FILES ${INCLUDE_DIR}/*.h)
-file(GLOB SRC_FILES ${SRC_DIR}/*.cpp)
+file(GLOB_RECURSE HEADER_FILES include/*.h)
+file(GLOB_RECURSE SRC_FILES src/*.cpp)
 
-add_executable(matrix ${SRC_FILES} ${HEADER_FILES})
+add_executable(matrix ${HEADER_FILES} ${SRC_FILES})
 
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
 	set_target_properties(matrix PROPERTIES
 		COMPILE_OPTIONS -Wpedantic -Wall -Wextra
-		INCLUDE_DIRECTORIES ${INCLUDE_DIR}
 	)
 elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
 	set_target_properties(matrix PROPERTIES
 		COMPILE_OPTIONS -W3 
-		INCLUDE_DIRECTORIES ${INCLUDE_DIR}
 	)
 endif()
 
