--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_script:
   - cd "${TRAVIS_BUILD_DIR}"
 
 script: 
+  - cd /home/travis/build/pk-otus/05_editor
   - cmake .
   - cmake --build .
   - cmake --build . --target test
