--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ before_script:
   - cd "${TRAVIS_BUILD_DIR}"
 
 script: 
+  - cd /home/travis/build/pk-otus/06_matrix/include
+  - ls
   - cd /home/travis/build/pk-otus/06_matrix
   - cmake .
   - cmake --build .
