--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,23 +6,26 @@ else()
    project(matrix VERSION 0.0.1)
 endif()
 
-configure_file(version.h.in ${PROJECT_SOURCE_DIR}/version.h)
-
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-file(GLOB_RECURSE HEADER_FILES include/*.h)
-file(GLOB_RECURSE SRC_FILES src/*.cpp)
+set(INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
+set(SRC_DIR ${PROJECT_SOURCE_DIR}/src)
+
+file(GLOB HEADER_FILES	${INCLUDE_DIR}/*.h)
+file(GLOB SRC_FILES		${SRC_DIR}/*.cpp)
 
 add_executable(matrix ${HEADER_FILES} ${SRC_FILES})
 
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
 	set_target_properties(matrix PROPERTIES
 		COMPILE_OPTIONS -Wpedantic -Wall -Wextra
+		INCLUDE_DIRECTORIES ${INCLUDE_DIR}
 	)
 elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
 	set_target_properties(matrix PROPERTIES
 		COMPILE_OPTIONS -W3 
+		INCLUDE_DIRECTORIES ${INCLUDE_DIR}
 	)
 endif()
 
