--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,6 @@ else()
    project(matrix VERSION 0.0.1)
 endif()
 
-set(CMAKE_CXX_STANDARD 14)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
 set(INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
 set(SRC_DIR ${PROJECT_SOURCE_DIR}/src)
 
@@ -17,15 +14,18 @@ file(GLOB SRC_FILES		${SRC_DIR}/*.cpp)
 
 add_executable(matrix ${HEADER_FILES} ${SRC_FILES})
 
+	set_target_properties(matrix PROPERTIES
+		CXX_STANDARD 14
+		CXX_STANDARD_REQUIRED ON
+		INCLUDE_DIRECTORIES ${INCLUDE_DIR}
+	)
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
 	set_target_properties(matrix PROPERTIES
 		COMPILE_OPTIONS -Wpedantic -Wall -Wextra
-		INCLUDE_DIRECTORIES ${INCLUDE_DIR}
 	)
 elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
 	set_target_properties(matrix PROPERTIES
 		COMPILE_OPTIONS -W3 
-		INCLUDE_DIRECTORIES ${INCLUDE_DIR}
 	)
 endif()
 
